Separate the packages list

--- a/ansible/playbooks/local-env.yml
+++ b/ansible/playbooks/local-env.yml
@@ -1,4 +1,5 @@
 - name: Create virtual machine for local development
-  # become: yes
+  hosts: all
+  become: yes
   roles:
     - prepare-localhost
