--- a/ansible/roles/prepare-localhost/vars/main.yml
+++ b/ansible/roles/prepare-localhost/vars/main.yml
@@ -1,9 +1,11 @@
-deb_pkgs:
+virtualization_packages:
   - qemu
   - qemu-kvm
   - libvirt-clients
   - libvirt-daemon-system
   - bridge-utils
   - virtinst
+
+iso_packages:
   - xorriso
   - syslinux
