Create a task for config creation

--- a/invoke/invoke.yaml
+++ b/invoke/invoke.yaml
@@ -3,6 +3,8 @@
 run:
   hide: True
 # Tasks specific variables
+config:
+  hostname: homelab
 file_dir: files/
 libvirt_dir: /var/lib/libvirt/images/
 libvirt_user: libvirt-qemu
